--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,7 @@ body {
     margin-bottom: 0;
     margin-top: 0;
     padding: 0;
+
 }
 
 a:link {
@@ -32,14 +33,19 @@ h1,
 h2,
 h3,
 h4 {
+    color: white;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 0;
     margin-right: 0;
 }
 
+
 hr {
     margin-bottom: 20px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #fff;
 }
 
 ul {
@@ -61,7 +67,11 @@ header {
 
 }
 
-
+#navigation {
+    background-color: #EB5757;
+    display: flex;
+    justify-content: space-around;
+}
 
 footer {
     background-color: #4F4F4F;
@@ -70,44 +80,50 @@ footer {
     padding: 30px;
 }
 
-container {
-    background-color: black;
+#wrapper{
+    background-color: #828282;    
 }
-
-#navigation {
-    background-color: #EB5757;
-    display: flex;
-    justify-content: space-around;
-}
-
-#contents {
+#container {
     display: flex;
     flex-wrap: wrap;
     justify-content: left;
-    align-items: center;
-    width: 600px;
+}
 
+#contents {
+    /* background-color: blue; */
+    width: 600px;
+}
+
+#ad {
+    /* background-color: #EB5757; */
+    flex-grow: 1;
+}
+
+#download {
+    /* background-color: #6FCF97; */
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.player{
+    margin: 10px;
 }
 
 .filename {
     padding: 20px;
 }
 
-.dl {
-    padding: 20px;
-}
-
 .menu {
     padding: 10px;
     text-align: center;
-    /* width: 100%; */
-    /* border-style: solid;
-    border-color: white;
-    border-width: 1px; */
 }
 
 #main {
-    background-color: #828282;
     color: white;
     padding: 20px;
 }
@@ -122,4 +138,8 @@ container {
 
 .good {
     color: #6FCF97;
+}
+
+section {
+    margin-bottom: 60px;
 }
